# Modelo-Dengue-Valle-del-Cauca

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: API.md  ARCHITECTURE.md  INDEX.md  SETUP.md
frontend/: Geodata Salud.html  geodata-app.js  geodata-data.js
notebooks/: analisis_dengue.html  analisis_dengue.ipynb  archivo_original.ipynb
outputs/lightning_logs/version_0/: events.out.tfevents.1776468257.DESKTOP-OL6SGQ4.33976.0
outputs/lightning_logs/version_1/: events.out.tfevents.1776468358.DESKTOP-OL6SGQ4.38268.0
outputs/lightning_logs/version_2/: events.out.tfevents.1776468406.DESKTOP-OL6SGQ4.16264.0  hparams.yaml
outputs/lightning_logs/version_3/: events.out.tfevents.1777597175.DESKTOP-OL6SGQ4.29596.0
scripts/: exportar_datos_obs.py  exportar_mapa.py  resumen.py  run_all.py  verificar_conexion.py
src/: config.py  db.py  mapa.py  modelo.py  pipeline.py  transform.py  viz.py
tests/: __init__.py  conftest.py  test_db.py  test_pipeline.py  test_transform.py
